# PCA_embedding

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_intelligent.txt
PNTs/: Abordatge del pacient en situacio de final de vida ingressat al Dispositiu dHospitalitzacio a Domicili HDOM_limpio.txt  Abordatge integral de la dona amb cancer ginecologic en tractament sistemic_limpio.txt  Acces a lassistencia sanitaria per a convenis internacionals i prestacions de caracter excepcional CASCIPE_limpio.txt  Acollida electiva del pacient a la unitat dhospitalitzacio en situacio de pandemia_limpio.txt  Acollida i atencio integral al pacient en el CDI_limpio.txt  Actuacio davant una crisi epileptica generalitzada tonicoclonica a la unitat depilepsia_limpio.txt  Actuacio en situacions demergencia obstetrica seu Maternitat circuit de trucades interdisciplinars davis_limpio.txt  Adequacio de lentorn a la unitat per afavorir el descans nocturn del pacient_limpio.txt  Administracio dantibiotics via inhalatoria_limpio.txt  Administracio de Levosimendan a lHospitalitzacio a domicili HDOM_limpio.txt  Administracio de medicaments Via Inhalatoria Pols seca_limpio.txt  Administracio de medicaments Via inhalatoria amb cartutx pressuritzat_limpio.txt  Administracio de medicaments Via inhalatoria_limpio.txt  Administracio de medicaments Via intradermica_limpio.txt  Administracio de medicaments Via intramuscular_limpio.txt  Administracio de medicaments Via intravenosa_limpio.txt  Administracio de medicaments Via oftalmica_limpio.txt  Administracio de medicaments Via oral_limpio.txt  Administracio dinsulina Via subcutania_limpio.txt  Administracio segura de ferroterapia intravenosa al domicili_limpio.txt  Aillament social solitud_limpio.txt  Alta del pacient trasplantat hepatic_limpio.txt  Alta infermeria_limpio.txt  Aplicacio de la tecnica terapeutica magnetoterapia_limpio.txt
benchmark/: preguntas_con_docs_cat.json  preguntas_con_docs_es.json
finetuning/: README.md  cargador_models.py  comparacion_modelos.py  comparacion_modelos_multiple.py  comparar_esemble.py  evaluar_ensemble_vs_base.py  fusion_txt.py  preparar_docs.py  test_modelos.py  train_embedding.py  train_embedding_colab_multiple.py
results/: aggressive_benchmark_comparison_report.txt  aggressive_benchmark_detailed_results.csv  aggressive_expansions.npz  aggressive_expansions_report.txt  benchmark_all_models_1756661811.json  benchmark_baseline_report.txt  benchmark_comparison_complete_report.txt  benchmark_detailed_results.csv  benchmark_expansion_detailed_results.csv  benchmark_results_1756660284.json  benchmark_results_1756660397.json  benchmark_results_1756660594.json  benchmark_results_1756660674.json  benchmark_results_1756660861.json  benchmark_results_1756661118.json  benchmark_results_1756661444.json  benchmark_results_1756662212.json  benchmark_results_1756662781.json  comprehensive_benchmark_report.txt  comprehensive_benchmark_results.csv  debug_intelligent_report.txt  expanded_embeddings_50d.npz  (+28 more)
(+103 files in other folders)
